[refactor] - ajustando respostas ao editar preco por lote

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,5 +11,5 @@ error.notFoundProduct=Produto nao encontrado
 error.updateDontExist=Produto nao teve informacoes atualizadas
 error.productInactive=Produto inativo
 error.invalidOperation=Operacao invalida
-error.valueHigher100=Valor nao deve ser maior que 100
 product.deleteSuccess=Produto deletado com sucesso
+product.updateSuccess=Produto editado com sucesso
